Fixed double horizontal scrollbar on FF

--- a/src/WebComponents/Scroller/scroller.scss
+++ b/src/WebComponents/Scroller/scroller.scss
@@ -247,6 +247,7 @@
     &:not([is-web-kit]) {
         > #wrapper {
             margin-right: calc(var(--theme-scrollbar-width) * -1);
+            margin-bottom: calc(var(--theme-scrollbar-width) * -1);
             padding-right: var(--theme-scrollbar-width);
             padding-bottom: var(--theme-scrollbar-width);
         }
